# sonic

./: .env.example  .gitignore  App.tsx  DEPLOYMENT.md  DEVELOPMENT_BUILD.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MIGRATIONS_GUIDE.md  README.md  SETUP.md  app.json  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
backend/: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOY_DIGITALOCEAN.md  Dockerfile  README.md  check-api.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  start.sh
backend/sonic_app/: admin.py  apps.py  auth.py  consumers.py  db_storage.py  legal_views.py  media_views.py  middleware.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/sonic_app/management/commands/: create_admin_user.py  create_dummy_user.py  create_test_user.py  seed_data.py  (+1 more)
backend/sonic_app/migrations/: 0001_initial.py  0002_user_additional_fields.py  0003_category_categoryfield_order_order_total_price_and_more.py  0004_session_address_session_latitude_session_longitude_and_more.py  0005_otp_login_user_session_fields.py  0006_categoryfield_variant_dimensions.py  0007_product_variant_and_cart_order.py  0008_add_product_weight.py  0009_alter_categoryfield_is_variant_dimension_and_more.py  0010_product_lead.py  0011_add_product_lead_quantity.py  0012_productlead_product_variant.py  0013_add_storedfile.py
backend/sonic_app/tests/: test_banners.py  test_otp_login.py
backend/sonic_backend/: asgi.py  settings.py  urls.py  wsgi.py
(+189 files in other folders)
